# ared-edge-iota-anchor

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  Dockerfile  Makefile  OWNERS  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_anchor_tables.py
k8s/base/: cronjob.yaml  kustomization.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/qa/: kustomization.yaml
src/app/: __init__.py  main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py
src/app/api/v1/endpoints/: __init__.py  anchors.py
src/app/core/: __init__.py  auth.py  config.py  logging.py
src/app/crypto/: __init__.py  merkle.py
src/app/db/: __init__.py  repository.py  session.py
src/app/metrics/: __init__.py  anchor_metrics.py
src/app/services/: __init__.py  anchor_service.py  anchor_workflow.py  event_consumer.py  iota_client.py  reconciliation.py
tests/: __init__.py  conftest.py  test_anchor_service.py  test_anchor_workflow.py  test_iota_client.py  test_merkle.py
