# =============================================================================
# ARED Edge IOTA Anchor Service
# =============================================================================
[project]
name = "ared-iota-anchor"
version = "1.0.0"
description = "IOTA Tangle anchoring service for ARED Edge IoT Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "ARED Team", email = "engineering@a-r-e-d.com" }
]

dependencies = [
    "iota-sdk>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "apscheduler>=3.10.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.scripts]
iota-anchor = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4", "UP"]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
